# spse_engine

./: .gitignore  AGENTS.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  build.rs
benchmarks/: last_report.md
config/: config.yaml  layer_20_schema.json  profiles.json  semantic_anchors.yaml
config/profiles/: balanced.yaml  confidence_heavy.yaml  deterministic.yaml  evidence_heavy.yaml  exploratory.yaml  high_accuracy.yaml  long_memory.yaml  low_latency.yaml  memory_conservative.yaml  retrieval_aggressive.yaml  retrieval_conservative.yaml  spatial_heavy.yaml
docs/: CODING_PLAN_TRAINING_ARCHITECTURE.md  CONFIG_TUNING_GUIDE.md  CORE_SYSTEM_AUDIT.md  DATASET_GENERATION_GUIDE.md  PRE_PRODUCTION_EXECUTION_PLAN.md  PRE_PRODUCTION_TRAINING_PLAN.md  SPSE_ARCHITECTURE.md  SPSE_ARCHITECTURE_V11.1.md  SPSE_ARCHITECTURE_V14.2.md  finalized_architecture_documentation_revised_v11.docx
proto/: api.proto
scripts/: analyze_observations.py  analyze_results.py  audit_pollution.py  drill_corpus_generator.py  generate_large_corpus.py  test_classification.py  test_data_generator.py  zero_shot_harness.py
src/: api.rs  bloom_filter.rs  crash_drill_lib.rs  datasets.rs  document.rs  drill_lib.rs  engine.rs  lib.rs  main.rs  mod.rs  open_sources.rs  persistence.rs  proto.rs  region_index.rs  scheduler.rs  spatial_index.rs  stress_drill_lib.rs  training.rs  types.rs
src/api/: openai_compat.rs
src/classification/: builder.rs  calculator.rs  hierarchy.rs  input.rs  intent.rs  mod.rs  pattern.rs  safety.rs  signature.rs  trainer.rs
src/common/: dedup.rs  ingestion.rs  matching.rs  mod.rs  scoring.rs  selection.rs  similarity.rs
src/config/: mod.rs
src/gpu/: device.rs  mod.rs
src/layers/: builder.rs  context.rs  feedback.rs  input.rs  intent.rs  mod.rs  output.rs  query.rs  resolver.rs  retrieval.rs  router.rs  safety.rs  search.rs
src/memory/: dynamic.rs  mod.rs  store.rs
src/predictive/: mod.rs  output.rs  resolver.rs  router.rs
src/reasoning/: context.rs  (+4 more)
test_data/: POLLUTION_TEST_REPORT.md  controlled_story_dataset.json  pollution_candidates.tsv  zero_shot_scenarios.json
tests/: config_harness_assets_test.rs  config_sweep_test.rs  gpu_fallback_test.rs  integration.rs  layer_boundary_tests.rs  v14_2_architecture_validation_test.rs
web-ui/: package-lock.json  package.json
(+44 files in other folders)
