[package]
name = "spse_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
rmp-serde = "1"
ndarray = "0.15"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
rusqlite = { version = "0.29", features = ["bundled"] }
scraper = "0.17" # Required for Layer 12
base64 = "0.22"
lopdf = "0.32"
quick-xml = "0.31"
zip = "2"
bzip2 = "0.4"
futures-util = "0.3"
parquet = "53"
regex = "1"
flate2 = "1"
arc-swap = "1"
prost = "0.13"
petgraph = "0.6"
crossbeam-channel = "0.5"
nalgebra = "0.33"
simdutf8 = "0.1"
once_cell = "1"

# GPU acceleration dependencies
wgpu = { version = "24", optional = true }
bytemuck = { version = "1", features = ["derive"], optional = true }
futures = { version = "0.3", optional = true }
log = "0.4"

[features]
default = ["gpu"]
gpu = ["wgpu", "bytemuck", "futures"]

[build-dependencies]
prost-build = "0.13"
protoc-bin-vendored = "3"

[dev-dependencies]
tower = "0.5"
tempfile = "3"
